objects/FieloEE__FrontEndSessionData__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FieloEE__ExpirationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloEE__Hash__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hash</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NonStaticSessionId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non Static Session Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SessionId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Front End Session Data</label>
</CustomObject>